--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -260,7 +260,7 @@ a:hover {
 
 .category-image {
     width: 100%;
-    height: auto;
+    height: 425px;
 }
 
 .category-button {
